little refactory